# gello_software

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
experiments/: launch_camera_clients.py  launch_camera_nodes.py  launch_nodes.py  run_env.py
gello/agents/: diffusion_agent.py  gello_agent.py  openpi_agent.py  pi0_agent.py
gello/data_utils/: gello_to_lerobot.py
gello/robots/: lite6_robot.py
installer/: ffmpeg_installer.sh
scripts/: gello_get_offset.py
